// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute forex api should return success for single base/quote pair 1`] = `
{
  "data": {
    "result": 4494.0249,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 4494.0249,
  "statusCode": 200,
}
`;

exports[`execute live  api should return success 1`] = `
{
  "data": {
    "result": 150.50501,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 150.50501,
  "statusCode": 200,
}
`;

exports[`execute live  api with invalid base should return failure 1`] = `
{
  "error": {
    "feedID": "{"data":{"endpoint":"live","base":"NON-EXISTING"}}",
    "message": "Result could not be found in path or is empty. This is likely an issue with the data provider or the input params/overrides.",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 502,
}
`;
